--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -1,2 +1,32 @@
-
+// Variables
+// Pantallas
+$width: 100%;
+$height: 100vh;
+// Tamaño Fuentes
+$font-h1:32px;
+$font-h2:30px;
+$font-logo: 36px;
+$font-title:40px;
+$font-p: 20px;
+// Tipografía
+$font-ppal: 'Tilt Warp', cursive;
+$font-second: Verdana, Geneva, Tahoma, sans-serif;
+// Backgrounds
+$background-ppal:rgb(235, 202, 159);
+$background-grad: radial-gradient(circle, rgba(251,176,63,1) 0%, rgba(240,228,181,1) 100%);
+$background-lin: linear-gradient(110deg, rgba(221,151,64,1) 0%, rgba(222,180,141,1) 30%, rgba(236,225,98,1) 100%);
+// Colors
+$color-nav:rgb(240, 202, 33);
+$color-second: #100c0b;
+$color-media: #ebeae0;
+$color-paragraph: #2c2b25;
+$color-letter: antiquewhite;
+$color-btn:rgb(251,176,63);
+// Bordes
+$border: none;
+// Text Centrado
+$text-center: center;
+// Shadows
+$shadow-letter: 2px 3px 10px black;
+$shadow-one: 2px 2px 5px rgb(231, 215, 137);
 
