--- a/scss/_generales.scss
+++ b/scss/_generales.scss
@@ -1,7 +1,40 @@
 @import url('https://fonts.googleapis.com/css2? family= Hind+Siliguri & family= Open+Sans:wght@400;500 & family= Overpass:wght@400;500 & family= Tilt+Warp & display=swap');
+@import url('https://fonts.googleapis.com/css2? family= Hind+Siliguri & family= Open+Sans:wght@400;500 & family= Overpass:wght@400;500 & family= Tilt+Warp & display=swap');
 
 // Generales
-
 *{
-    
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box; 
+    font-family: $font-ppal;
+    // text-decoration: none;
+} 
+
+// .item__nav{
+//         color: antiquewhite;
+//         text-decoration: none;
+//         list-style: none;
+//         transition: all .3s ease;
+// }
+
+@mixin box-flex($justify, $align, $wrap){
+    display:flex;
+    justify-content:$justify;
+    align-items: $align;
+    flex-wrap: $wrap;
+}
+@mixin box-flextwo($justify, $align){
+    display:flex;
+    justify-content:$justify;
+    align-items: $align;
+}
+
+@mixin displayForm {
+    display: grid;
+    place-items: center;
+} 
+
+.background_style{
+    background-repeat: no-repeat;
+    background-size: cover;
 }
