--- a/css/style.css
+++ b/css/style.css
@@ -13,6 +13,7 @@
 }
 
 header nav {
+  width: 100%;
   background-color: #100c0b;
   height: 80px;
 }
@@ -29,6 +30,11 @@ header nav .nav-container .title__header {
   font-size: 36px;
   color: rgb(240, 202, 33);
   text-shadow: 2px 3px 10px rgb(150, 144, 144);
+}
+@media screen and (max-width: 438px) {
+  header nav .nav-container .title__header {
+    font-size: 30px;
+  }
 }
 header nav .nav-container .nav_input, header nav .nav-container .nav__label {
   display: none;
@@ -356,6 +362,108 @@ main .form-section .container_form .social_media .logofa.logoTT:hover, main .for
 }
 main .form-section .container_form .social_media .logofa.logoTT:hover .fa-tiktok, main .form-section .container_form .social_media .logoIg.logoTT:hover .fa-tiktok, main .form-section .container_form .social_media .logoYT.logoTT:hover .fa-tiktok, main .form-section .container_form .social_media .logoTT.logoTT:hover .fa-tiktok {
   color: #ebeae0;
+}
+
+.main_recipes {
+  width: 100%;
+}
+.main_recipes .to-back {
+  height: 30px;
+  border: none;
+  margin-top: 15px;
+  margin-left: 15px;
+}
+.main_recipes .to-back .btn__return {
+  text-decoration: none;
+  color: #100c0b;
+}
+.main_recipes .to-back .btn__return:hover {
+  text-shadow: 3px 3px 10px orange;
+}
+.main_recipes .recipes-title {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 50px;
+}
+.main_recipes .recipes-title .input_recipes {
+  width: 500px;
+  height: 50px;
+  border-radius: 25px;
+  padding: 10px;
+  border: 2px solid transparent;
+  background-color: rgb(246, 232, 214);
+}
+@media screen and (max-width: 654px) {
+  .main_recipes .recipes-title .input_recipes {
+    width: 70%;
+  }
+}
+.main_recipes .recipes-title .search-btn {
+  font-size: 35px;
+  background-color: white;
+  border: none;
+  border-radius: 5px;
+  margin-left: 5px;
+  cursor: pointer;
+}
+.main_recipes .container_paragraph {
+  width: 100%;
+  margin-top: 25px;
+  margin: 10px 10px;
+  text-align: center;
+}
+@media screen and (max-width: 860px) {
+  .main_recipes .container_paragraph {
+    width: 100%;
+    margin: 0px 0px;
+  }
+}
+.main_recipes .container_paragraph h1 {
+  font-size: 36px;
+  margin-top: 30px;
+  margin-bottom: 15px;
+}
+.main_recipes .container_paragraph .paragraph__recipes {
+  font-size: 20px;
+}
+@media screen and (max-width: 860px) {
+  .main_recipes .container_paragraph .paragraph__recipes {
+    width: 90%;
+    text-align: center;
+    font-size: 18px;
+    margin: 5px;
+  }
+}
+.main_recipes .container-galeria {
+  width: 100%;
+  display: flex;
+  flex-flow: wrap;
+  justify-content: center;
+  margin: 30px 30px;
+  padding: 10px 10px;
+}
+@media screen and (max-width: 860px) {
+  .main_recipes .container-galeria {
+    margin: 0px;
+  }
+}
+.main_recipes .container-galeria .card {
+  box-shadow: 0 0 6px black;
+  transition: all 0.8s ease;
+}
+.main_recipes .container-galeria .card:hover {
+  transform: scale(0.9);
+}
+.main_recipes .container-galeria .card .img-box {
+  max-width: 400px;
+  margin: 15px;
+}
+@media screen and (max-width: 438px) {
+  .main_recipes .container-galeria .card .img-box {
+    max-width: 250px;
+  }
 }
 
 footer {
