--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -1,5 +1,6 @@
 header{
     nav{
+        width: 100%;
         background-color: $color-second;
         height: 80px;
         .nav-container{
@@ -12,7 +13,9 @@ header{
                 font-size: $font-logo;
                 color: $color-nav;
                 text-shadow: 2px 3px 10px rgb(150, 144, 144);
-                // margin-left: 30px; 
+                @include mini-mobile {
+                    font-size: 30px;
+                }
             }
             .nav_input, .nav__label{
                 display: none;
