--- a/scss/_main.scss
+++ b/scss/_main.scss
@@ -1,4 +1,4 @@
-// main
+// main index
 main{
     // Seccion principal
     .section_main{
@@ -261,3 +261,107 @@ main{
         }
     }
 }
+
+// main recetas html
+.main_recipes{
+    width: 100%;
+    .to-back{
+        height: 30px;
+        border: $border;
+        margin-top: 15px;
+        margin-left: 15px;
+        .btn__return{
+            text-decoration: none;
+            color: $color-second;
+            &:hover{
+            text-shadow: 3px 3px 10px orange;
+            }
+        }
+    }
+    .recipes-title{
+        @include box-flextwo(center,center);
+        width: 100%;
+        height: 50px;
+        // background-color: #5D698D;
+        .input_recipes{
+            width: 500px;
+            height: 50px;
+            border-radius: 25px;
+            padding: 10px;
+            border: 2px solid transparent;
+            background-color: rgb(246, 232, 214);
+            @include mobile{
+                width: 70%;
+            }
+        }
+        .search-btn{
+            font-size: 35px;
+            background-color: white;
+            border: none;
+            border-radius: 5px;
+            margin-left: 5px;
+            cursor: pointer;
+        }
+    }
+    .container_paragraph{
+        width: 100%;
+        margin-top: 25px;
+        margin: 10px 10px;
+        text-align: center;
+        @include tablet {
+            width: 100%;
+            margin: 0px 0px;
+        }
+
+        h1{
+            font-size: 36px;
+            margin-top: 30px;
+            margin-bottom: 15px;
+        }
+        .paragraph__recipes{
+            font-size: 20px; 
+            @include tablet {
+                width: 90%;
+                text-align: center;
+                font-size: 18px;
+                margin: 5px;
+            }
+        }
+    }
+    .container-galeria{
+        width: 100%;
+        display: flex;
+        flex-flow: wrap;
+        justify-content: center;
+        margin: 30px 30px;
+        padding: 10px 10px;
+        @include tablet {
+            margin: 0px;
+        }
+        .card{
+            box-shadow: 0 0 6px black;
+            transition: all 0.8s ease;
+            &:hover{
+                transform: scale(0.9);
+            }
+            .img-box{
+                max-width: 400px;
+                // padding: 1rem; 
+                margin: 15px;
+                @include mini-mobile{
+                    max-width: 250px;
+                }
+            }
+            
+                
+        }
+        
+    }
+}
+    
+
+
+
+    
+
+
