--- a/css/style.css
+++ b/css/style.css
@@ -466,6 +466,100 @@ main .form-section .container_form .social_media .logofa.logoTT:hover .fa-tiktok
   }
 }
 
+.main_recomienda {
+  width: 100%;
+}
+.main_recomienda .to-back {
+  height: 30px;
+  border: none;
+  padding: 15px;
+  margin-left: 15px;
+}
+.main_recomienda .to-back .btn__return {
+  text-decoration: none;
+  color: #100c0b;
+}
+.main_recomienda .to-back .btn__return:hover {
+  text-shadow: 3px 3px 10px orange;
+}
+.main_recomienda .container_paragraph {
+  width: 100%;
+  margin-top: 25px;
+  margin: 10px 10px;
+  text-align: center;
+}
+@media screen and (max-width: 860px) {
+  .main_recomienda .container_paragraph {
+    width: 100%;
+    margin: 0px 0px;
+  }
+}
+.main_recomienda .container_paragraph h1 {
+  font-size: 36px;
+  margin-top: 30px;
+  margin-bottom: 15px;
+}
+.main_recomienda .container_paragraph .paragraph__recommendations {
+  font-size: 20px;
+}
+@media screen and (max-width: 860px) {
+  .main_recomienda .container_paragraph .paragraph__recommendations {
+    width: 90%;
+    text-align: center;
+    font-size: 18px;
+    margin: 5px;
+  }
+}
+.main_recomienda .container-galeria {
+  width: 100%;
+  display: flex;
+  flex-flow: wrap;
+  justify-content: center;
+  margin: 30px 30px;
+  padding: 10px 10px;
+}
+@media screen and (max-width: 860px) {
+  .main_recomienda .container-galeria {
+    margin: 0px;
+  }
+}
+.main_recomienda .container-galeria .card {
+  box-shadow: 0 0 6px black;
+  transition: all 0.8s ease;
+}
+.main_recomienda .container-galeria .card:hover {
+  transform: scale(0.9);
+}
+.main_recomienda .container-galeria .card .img-box {
+  max-width: 400px;
+  margin: 15px;
+}
+@media screen and (max-width: 438px) {
+  .main_recomienda .container-galeria .card .img-box {
+    max-width: 250px;
+  }
+}
+.main_recomienda .btn-recomienda {
+  width: 100%;
+  height: 50px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.main_recomienda .btn-recomienda button {
+  width: 200px;
+  height: 35px;
+  border-radius: 8px;
+  border: none;
+  box-shadow: 0 0 6px black;
+  transition: all 0.8s ease;
+  background-color: rgb(251, 176, 63);
+}
+.main_recomienda .btn-recomienda button a {
+  text-decoration: none;
+  color: #100c0b;
+}
+
 footer {
   height: 100px;
   margin-top: 1px;
