--- a/scss/_main.scss
+++ b/scss/_main.scss
@@ -282,7 +282,6 @@ main{
         @include box-flextwo(center,center);
         width: 100%;
         height: 50px;
-        // background-color: #5D698D;
         .input_recipes{
             width: 500px;
             height: 50px;
@@ -312,7 +311,6 @@ main{
             width: 100%;
             margin: 0px 0px;
         }
-
         h1{
             font-size: 36px;
             margin-top: 30px;
@@ -346,7 +344,6 @@ main{
             }
             .img-box{
                 max-width: 400px;
-                // padding: 1rem; 
                 margin: 15px;
                 @include mini-mobile{
                     max-width: 250px;
@@ -358,7 +355,95 @@ main{
         
     }
 }
+
+// Main HTML Recomienda
+.main_recomienda{
+    width: 100%;
+    .to-back{
+        height: 30px;
+        border: $border;
+        padding: 15px;
+        margin-left: 15px;
+        .btn__return{
+            text-decoration: none;
+            color: $color-second;
+            &:hover{
+            text-shadow: 3px 3px 10px orange;
+            }
+        }
+    }
+    .container_paragraph{
+            width: 100%;
+            margin-top: 25px;
+            margin: 10px 10px;
+            text-align: center;
+            @include tablet {
+                width: 100%;
+                margin: 0px 0px;
+            }
+            h1{
+                font-size: 36px;
+                margin-top: 30px;
+                margin-bottom: 15px;
+            }
+            .paragraph__recommendations{
+                font-size: 20px; 
+                @include tablet {
+                    width: 90%;
+                    text-align: center;
+                    font-size: 18px;
+                    margin: 5px;
+                }
+            }
+        }
+        .container-galeria{
+            width: 100%;
+            display: flex;
+            flex-flow: wrap;
+            justify-content: center;
+            margin: 30px 30px;
+            padding: 10px 10px;
+            @include tablet {
+                margin: 0px;
+            }
+            .card{
+                box-shadow: 0 0 6px black;
+                transition: all 0.8s ease;
+                &:hover{
+                    transform: scale(0.9);
+                }
+                .img-box{
+                    max-width: 400px;
+                    margin: 15px;
+                    @include mini-mobile{
+                        max-width: 250px;
+                    }
+                }     
+            }
+        }
+        .btn-recomienda{
+            width: 100%;
+            height: 50px;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            button{
+                width: 200px;
+                height: 35px;
+                border-radius: 8px;
+                border: none;
+                box-shadow: 0 0 6px black;
+                transition: all 0.8s ease;
+                background-color: $color-btn;
+                a{
+                    text-decoration: none;
+                    color: #100c0b;
+                }
+            }
+        }
+}
     
+
 
 
 
