--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -46,7 +46,7 @@ header{
                     top: 80px;
                     bottom: 0;
                     background: #100f0f;
-                    width: 100%;
+                    width: $width;
                     left: 0;
                     display: flex;
                     justify-content: space-evenly;
