--- a/css/style.css
+++ b/css/style.css
@@ -618,6 +618,4 @@ footer .container-footer {
     padding: 3px 10px;
     text-align: center;
   }
-}
-
-/*# sourceMappingURL=style.css.map */
+}/*# sourceMappingURL=style.css.map */
